最长公共前缀-循环迭代法

--- a/ectopic-word.html
+++ b/ectopic-word.html
@@ -27,7 +27,7 @@
       let t1 = "car";
       console.log(isAnagram(s1, t1));
 
-      // 方法二
+      // 方法二 哈希
       const isAnagram1 = (s, t) => {
          const hash = {};
 
