--- a/longest-common-prefix.html
+++ b/longest-common-prefix.html
@@ -32,7 +32,31 @@
       console.log(longestCommonPrefix(strs));
 
       // 方法二 循环迭代
-      
+      const longestCommonPrefix1 = (strs) => {
+         if (strs.length == 0) {
+            return '';
+         }
+         let i = 0;
+         let flag = true;
+         while(flag) {
+            if (strs[0].length > i) {
+               let char = strs[0].charAt(i);
+               for (let j = 1; j < strs.length; j++) {
+                  if (strs[j].length <= i || strs[j].charAt(i) !== char) {
+                     flag = false;
+                     break;
+                  }
+               }
+            } else {
+               flag = false;
+            }
+            i++;
+         }
+         return strs[0].substring(0, i - 1);
+      };
+
+      let strs1 = ["flower","flow","flight"];
+      console.log(longestCommonPrefix1(strs1));
    </script>
 </body>
 </html>
