--- a/reverse-string.html
+++ b/reverse-string.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>反转字符串</title>
+   <title>反转字符串数组</title>
 </head>
 <body>
    <script>
